--- a/centen/pano.html
+++ b/centen/pano.html
@@ -249,7 +249,7 @@
             divCoca.style.height = "20px";
             divCoca.innerHTML = "<a href='http://www.worldofcoca-cola.com/' target='_blank'>World of Coca Cola</a>";
 
-            divCNN.id = "cssPlace";
+            divCNN.id = "divMarker";
             // divCNN.innerHTML = "<a href='http://www.cnn.com/tour/' target='_blank'>CNN</a>";
             divCNN.innerHTML = "<img src='./resources/icon/rockhouse.png'></img>"
             
@@ -335,9 +335,9 @@
 
             cssObjectAqua.width = 200;
             cssObjectAqua.height = 12;
-            cssObjectAqua.position.x = 150.0;
-            cssObjectAqua.position.y = 20.0;
-            cssObjectAqua.position.z = -40.0;   
+            cssObjectAqua.position.x = 200.0;
+            cssObjectAqua.position.y = 25.0;
+            cssObjectAqua.position.z = -80.0;   
             cssObjectAqua.rotation.y = - Math.PI / 2;
 
             cssObjectCoca.width = 200;
