--- a/centen/pano.html
+++ b/centen/pano.html
@@ -333,14 +333,14 @@
             cssObjectCenten.rotation.x = 0;
             cssObjectCenten.rotation.z = 0;
 
-            alert('0.37');
+            alert('0.38');
 
             cssObjectAqua.width = 200;
             cssObjectAqua.height = 12;
             cssObjectAqua.position.x = 220.0;
             cssObjectAqua.position.y = -10.0;
             cssObjectAqua.position.z = -120.0;   
-            cssObjectAqua.rotation.y = - Math.PI / 2;
+            cssObjectAqua.rotation.y = - Math.PI / 2 + 0.3;
 
             cssObjectCoca.width = 200;
             cssObjectCoca.height = 12;
