--- a/centen/pano.html
+++ b/centen/pano.html
@@ -239,10 +239,12 @@
             divCenten.id = "cssPlace";
             divCenten.innerHTML = "<a href='http://www.centennialpark.com/' target='_blank'>Centenial Olympic Park</a>";
 
-            divAqua.id = "cssPlace";
-            divAqua.style.width = "100px";
-            divAqua.style.height = "20px";
-            divAqua.innerHTML = "<a href='http://www.georgiaaquarium.org/' target='_blank'>Georgia Aquarium</a>";
+            alert('0.40');
+
+            divAqua.id = "divMarker";
+            // divAqua.style.width = "100px";
+            // divAqua.style.height = "20px";
+            divAqua.innerHTML = "<img src='./resources/icon/statue-2.png'></img>";
 
             divCoca.id = "cssPlace";
             divCoca.style.width = "100px";
@@ -333,7 +335,7 @@
             cssObjectCenten.rotation.x = 0;
             cssObjectCenten.rotation.z = 0;
 
-            alert('0.39');
+            
 
             cssObjectAqua.width = 200;
             cssObjectAqua.height = 12;
