--- a/centen/pano.html
+++ b/centen/pano.html
@@ -359,12 +359,12 @@
             cssObjectCNN.rotation.y =  Math.PI / 2;
 
 
-            scene.add(cssObjectXpos);
-            scene.add(cssObjectXneg);
-            scene.add(cssObjectYpos);
-            scene.add(cssObjectYneg);
-            scene.add(cssObjectZpos);
-            scene.add(cssObjectZneg);
+            // scene.add(cssObjectXpos);
+            // scene.add(cssObjectXneg);
+            // scene.add(cssObjectYpos);
+            // scene.add(cssObjectYneg);
+            // scene.add(cssObjectZpos);
+            // scene.add(cssObjectZneg);
             scene.add(cssObjectCNN);
 
             scene.add(cssObjectCenten);
