--- a/centen/pano.html
+++ b/centen/pano.html
@@ -244,7 +244,7 @@
             divAqua.id = "divMarker";
             // divAqua.style.width = "100px";
             // divAqua.style.height = "20px";
-            divAqua.innerHTML = "<img src='./resources/icon/statue-2.png'></img>";
+            divAqua.innerHTML = "<img src='./resources/icon/rock.png'></img>";
 
             divCoca.id = "cssPlace";
             divCoca.style.width = "100px";
@@ -335,7 +335,7 @@
             cssObjectCenten.rotation.x = 0;
             cssObjectCenten.rotation.z = 0;
 
-            alert('0.49');
+            alert('0.50');
 
             cssObjectAqua.width = 200;
             cssObjectAqua.height = 12;
