--- a/centen/pano.html
+++ b/centen/pano.html
@@ -244,7 +244,7 @@
             divAqua.id = "divMarker";
             // divAqua.style.width = "100px";
             // divAqua.style.height = "20px";
-            divAqua.innerHTML = "<img src='./resources/icon/rock.png'></img>";
+            divAqua.innerHTML = "<img src='./resources/icon/road.png'></img>";
 
             divCoca.id = "cssPlace";
             divCoca.style.width = "100px";
