--- a/centen/pano.html
+++ b/centen/pano.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>auburn</title>
+    <link rel="stylesheet" href="jquery.mobile-1.4.2.min.css">
     <style type="text/css">
          /**
          * Example of an initial loading indicator.
@@ -49,6 +50,7 @@
     <script src="three61.min.js"></script>
     <script src="CSS3D61Renderer.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="jquery.mobile-1.4.2.min.js"></script>
     <script>
 
         var isLandScape = 1;
