--- a/centen/test.html
+++ b/centen/test.html
@@ -48,7 +48,9 @@
     <script src="CSS3D61Renderer.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="jquery.mobile-1.4.2.min.js"></script>
-    123
+    <script>
+    alert('1');
+    </script>
     <a href="#abc" data-rel="popup" data-role="button" data-inline="true" data-transition="pop">Basic Popup</a>
 
     <div data-role="popup" id="abc">
