--- a/centen/pano.html
+++ b/centen/pano.html
@@ -247,7 +247,7 @@
             divAqua.id = "divMarker";
             // divAqua.style.width = "100px";
             // divAqua.style.height = "20px";
-            divAqua.innerHTML = "<a href='#popupAbAve' data-rel='popup' data-role='button' data-inline='true' data-transition='pop'><img src='./resources/icon/road.png'></img>";
+            divAqua.innerHTML = "<a href='#popupAA' data-rel='popup' data-role='button' data-inline='true' data-transition='pop'><img src='./resources/icon/road.png'></img>";
 
 
 
@@ -530,7 +530,7 @@
 
                    
     </script>
-    <div data-role="popup" id="popupAbAve">
+    <div data-role="popup" id="popupAA">
         <p>This is Auburn Ave.</p>
     </div>    
 </body>
