--- a/centen/pano.html
+++ b/centen/pano.html
@@ -349,7 +349,7 @@
             cssObjectCenten.rotation.x = 0;
             cssObjectCenten.rotation.z = 0;
 
-            alert('0.56');
+            alert('0.57');
 
             cssObjectAqua.width = 200;
             cssObjectAqua.height = 12;
@@ -543,7 +543,7 @@
                    
     </script>
     <div data-role="popup" id="popupAA">
-        <p>This is Auburn Ave.</p>
+        <p>This is Auburn Ave. The Sweet Auburn Historic District is a historic African-American neighborhood along and surrounding Auburn Avenue, east of Downtown Atlanta, Georgia, United States. The name Sweet Auburn was coined by John Wesley Dobbs, referring to the "richest Negro street in the world."</p>
     </div>    
 
     <div data-role="popup" id="popupYMCA" class="photopopup" data-overlay-theme="a" data-corners="false" data-tolerance="30,15" >
