--- a/centen/pano.html
+++ b/centen/pano.html
@@ -215,7 +215,7 @@
             // the width and height is used to align things.
             
 
-            alert('0.64');
+            alert('0.65');
 
             cssObjectAA.width = 200;
             cssObjectAA.height = 12;
@@ -332,7 +332,7 @@
         }
 
         function capture_orientation (event) {
-             alpha = (event.alpha) % 360;
+             alpha = (event.alpha - 75) % 360;
              beta = event.beta;
              gamma = event.gamma;
          // alert('Orientation - Alpha: '+alpha+', Beta: '+beta+', Gamma: '+gamma);
