--- a/centen/pano.html
+++ b/centen/pano.html
@@ -179,7 +179,7 @@
             var divAA = document.createElement('div');
             var divYMCA = document.createElement('div');
             var divYMCAText = document.createElement('div');
-            div divYMCAOld = document.createElement('div');
+            var divYMCAOld = document.createElement('div');
 
             
             divYMCAText.id = "divMarker";
