--- a/centen/pano.html
+++ b/centen/pano.html
@@ -192,8 +192,8 @@
 
 
 
-            divCoca.id = "divMarker";
-            divCoca.innerHTML = "<div onclick='static'><a href='#popupYMCAOld' data-rel='popup' data-role='button' data-inline='true' data-transition='pop'><img src='./resources/icon/photo.png'></img></a></div>";
+            divYMCAOld.id = "divMarker";
+            divYMCAOld.innerHTML = "<div onclick='static'><a href='#popupYMCAOld' data-rel='popup' data-role='button' data-inline='true' data-transition='pop'><img src='./resources/icon/photo.png'></img></a></div>";
 
             divYMCA.id = "divMarker";
             // divYMCA.innerHTML = "<a href='http://www.cnn.com/tour/' target='_blank'>YMCA</a>";
