--- a/centen/pano.html
+++ b/centen/pano.html
@@ -215,7 +215,7 @@
             // the width and height is used to align things.
             
 
-            alert('0.68');
+            alert('0.69');
 
             // cssObjectAA.width = 200;
             // cssObjectAA.height = 12;
@@ -238,9 +238,9 @@
             cssObjectYMCAText.rotation.y =  Math.PI / 2;
 
             cssObjectYMCAOld.position.x = -50.0;
-            cssObjectYMCAOld.position.y = 0.0;
+            cssObjectYMCAOld.position.y = -50.0;
             cssObjectYMCAOld.position.z = 5.0;              
-            cssObjectYMCAOld.rotation.y = 0;
+            cssObjectYMCAOld.rotation.y = Math.PI / 2;
 
 
             scene.add(cssObjectYMCA);
