--- a/centen/pano.html
+++ b/centen/pano.html
@@ -215,7 +215,7 @@
             // the width and height is used to align things.
             
 
-            alert('0.70');
+            alert('0.71');
 
             // cssObjectAA.width = 200;
             // cssObjectAA.height = 12;
@@ -237,10 +237,10 @@
             cssObjectYMCAText.position.z = 5.0;              
             cssObjectYMCAText.rotation.y =  Math.PI / 2;
 
-            cssObjectYMCAOld.position.x = -200.0;
-            cssObjectYMCAOld.position.y = -50.0;
-            cssObjectYMCAOld.position.z = 20.0;              
-            cssObjectYMCAOld.rotation.y = Math.PI / 2;
+            cssObjectYMCAOld.position.x = 0;
+            cssObjectYMCAOld.position.y = 0
+            cssObjectYMCAOld.position.z = -100;              
+            cssObjectYMCAOld.rotation.y = Math.PI / 6;
 
 
             scene.add(cssObjectYMCA);
