--- a/centen/pano.html
+++ b/centen/pano.html
@@ -215,7 +215,7 @@
             // the width and height is used to align things.
             
 
-            alert('0.71');
+            alert('0.72');
 
             // cssObjectAA.width = 200;
             // cssObjectAA.height = 12;
@@ -239,8 +239,8 @@
 
             cssObjectYMCAOld.position.x = 0;
             cssObjectYMCAOld.position.y = 0
-            cssObjectYMCAOld.position.z = -100;              
-            cssObjectYMCAOld.rotation.y = Math.PI / 6;
+            cssObjectYMCAOld.position.z = -400;              
+            cssObjectYMCAOld.rotation.y = 0;
 
 
             scene.add(cssObjectYMCA);
