--- a/centen/pano.html
+++ b/centen/pano.html
@@ -215,7 +215,7 @@
             // the width and height is used to align things.
             
 
-            alert('0.72');
+            alert('0.73');
 
             // cssObjectAA.width = 200;
             // cssObjectAA.height = 12;
@@ -237,10 +237,10 @@
             cssObjectYMCAText.position.z = 5.0;              
             cssObjectYMCAText.rotation.y =  Math.PI / 2;
 
-            cssObjectYMCAOld.position.x = -35;
+            cssObjectYMCAOld.position.x = -90;
             cssObjectYMCAOld.position.y = 0
             cssObjectYMCAOld.position.z = -250;              
-            cssObjectYMCAOld.rotation.y = 0;
+            cssObjectYMCAOld.rotation.y = Math.PI / 5;
 
 
             scene.add(cssObjectYMCA);
